--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import '../styles/global.css';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/Portafolio/Logo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/Portafolio-v.1.2/Logo.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Keiver Luna</title>
 	</head>
