--- a/src/components/SubComponent/Start.astro
+++ b/src/components/SubComponent/Start.astro
@@ -14,7 +14,7 @@ import LinkedinIcon from "../SubComponent/Icons/LinkedinIcon.astro"
     </div>
   </section>
 
-  <section class="flex-col flex-[90%] p-4 mt-40 gap-2 xl:mt-0 xl:flex xl:flex-[75%] xl:w-[75%] xl:flex-col xl:justify-center xl:gap-2">
+  <section class="flex-col flex-[90%] p-4 mt-40 gap-2 xl:mt-0 xl:flex xl:flex-[75%] xl:w-[75%] xl:flex-col xl:justify-center xl:gap-0">
     <div>
       <p class="text-[#C7FFED] text-base">Hello, my name is</p>
     </div>
@@ -29,8 +29,7 @@ import LinkedinIcon from "../SubComponent/Icons/LinkedinIcon.astro"
 
     <div class="mt-10  xl:mt-10 text-zinc-500 text-base md:text-xl">
       <p>
-        I am a front-end programmer and part of UI, <br />
-        I create the structure of the website and its style.
+        I design web experiences that look good, load fast, <br> and work on any device.
       </p>
     </div>
 
