--- a/src/components/SubComponent/Start.astro
+++ b/src/components/SubComponent/Start.astro
@@ -27,7 +27,7 @@ import LinkedinIcon from "../SubComponent/Icons/LinkedinIcon.astro"
       <h1 class="font-bold text-4xl xl:text-6xl text-zinc-400">Imagine First Second Create.</h1>
     </div>
 
-    <div class="mt-10  xl:mt-10 text-zinc-500 text-base md:text-xl">
+    <div class="mt-10  xl:mt-10 text-slate-400 text-base md:text-xl">
       <p>
         I design web experiences that look good, load fast, <br> and work on any device.
       </p>
