--- a/src/components/SubComponent/Tecnologias.astro
+++ b/src/components/SubComponent/Tecnologias.astro
@@ -21,13 +21,13 @@ import TailwindTecnologi from "./Cards/TailwindTecnologi.astro";
 
     <!-- Descripción -->
     <div class="text-center space-y-4">
-      <p class="text-zinc-400 text-lg">
+      <p class="text-slate-400 text-lg">
         I like to code things from scratch, and enjoy bringing ideas to life in the browser.
       </p>
 
       <div>
         <p class="text-[#9AEBA3] font-semibold">Languages I speak:</p>
-        <p class="text-zinc-400">HTML, CSS, JavaScript, TypeScript, Java <span class="text-[#DAFDBA]">(In Coming)</span>, Git, Node</p>
+        <p class="text-slate-400">HTML, CSS, JavaScript, TypeScript, Java <span class="text-[#DAFDBA]">(In Coming)</span>, Git, Node</p>
       </div>
 
       <div>
