--- a/src/components/SubComponent/About.astro
+++ b/src/components/SubComponent/About.astro
@@ -16,7 +16,7 @@ import ReactIcon from "./Icons/ReactIcon.astro";
 
     <div class="flex gap-4 mt-10 xl:flex xl:gap-4 xl:mt-20">
       <div class="xl:flex xl:flex-col xl:gap-4">
-        <p class="font-normal md:text-xl xl:text-lg text-zinc-500">
+        <p class="font-normal md:text-xl xl:text-lg text-slate-400">
           <span class="text-[#C7FFED]">Hello,</span> my name is <span class="text-[#C7FFED]">Keiver Luna</span> and for some time now <br />
           I have been interested in web programming and I decided <br />
           to apply in the front-end area at 16 years old, and now <br />
@@ -24,7 +24,7 @@ import ReactIcon from "./Icons/ReactIcon.astro";
           where you will find my <span class="text-[#C7FFED]">experiences</span>, knowledge and <span class="xl:text-[#C7FFED]">projects.</span> <br />
         </p>
         <br>
-        <p class="font-normal md:text-xl xl:text-lg text-zinc-500">
+        <p class="font-normal md:text-xl xl:text-lg text-slate-400">
           <span class="text-zinc-300">My focus</span> now is to continue studying and implementing new <br />
           technologies such as the <span class="xl:text-zinc-300">Astro</span> framework or a more <br />
           classic <span class="text-zinc-300">React</span>, each one has different uses and different <br />
