--- a/src/components/SubComponent/About.astro
+++ b/src/components/SubComponent/About.astro
@@ -17,17 +17,17 @@ import ReactIcon from "./Icons/ReactIcon.astro";
     <div class="flex gap-4 mt-10 xl:flex xl:gap-4 xl:mt-20">
       <div class="xl:flex xl:flex-col xl:gap-4">
         <p class="font-normal md:text-xl xl:text-lg text-slate-400">
-          <span class="text-[#C7FFED]">Hello,</span> my name is <span class="text-[#C7FFED]">Keiver Luna</span> and for some time now <br />
-          I have been interested in web programming and I decided <br />
+          <span class="text-[#C7FFED]">Hello,</span> my name is <span class="text-[#C7FFED]">Keiver Luna</span> and for some time now <br class="hidden xl:block" />
+          I have been interested in web programming and I decided <br class="hidden xl:block" />
           to apply in the front-end area at 16 years old, and now <br />
-          at 18 years old, where are you now is my personal portafolio <br />
+          at 18 years old, where are you now is my personal portafolio <br class="hidden xl:block" />
           where you will find my <span class="text-[#C7FFED]">experiences</span>, knowledge and <span class="xl:text-[#C7FFED]">projects.</span> <br />
         </p>
         <br>
         <p class="font-normal md:text-xl xl:text-lg text-slate-400">
-          <span class="text-zinc-300">My focus</span> now is to continue studying and implementing new <br />
-          technologies such as the <span class="xl:text-zinc-300">Astro</span> framework or a more <br />
-          classic <span class="text-zinc-300">React</span>, each one has different uses and different <br />
+          <span class="text-zinc-300">My focus</span> now is to continue studying and implementing new <br class="hidden xl:block" />
+          technologies such as the <span class="xl:text-zinc-300">Astro</span> framework or a more <br class="hidden xl:block" />
+          classic <span class="text-zinc-300">React</span>, each one has different uses and different <br class="hidden xl:block" />
           learning processes, which is currently<span class="text-white">.</span>
         </p>
 
